plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // API send
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

//    // elasticsearch
//    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
//    implementation 'co.elastic.clients:elasticsearch-java:8.12.0'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // OkHttp
    implementation 'com.squareup.okhttp3:okhttp:4.11.0'

    // 교보문고, 예스25 구매페이지 이동을 위함 크롤링 의존성
    implementation 'org.jsoup:jsoup:1.17.2'

    // @SchedulerLock 적용
    implementation 'net.javacrumbs.shedlock:shedlock-spring:5.9.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.9.0'



}

tasks.named('test') {
    useJUnitPlatform()
}
